fixing spacing.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,7 @@ html {
   align-items: center;
   justify-content: space-between;
   background-color: cadetblue;
+  width: 100%;
   margin-top: 1rem;
 }
 
@@ -39,13 +40,14 @@ html {
 .navigation img {
   height: 1.5rem;
   width: auto;
-  margin-left: 2rem;
-  margin-right: 1rem;
+  padding-left: 2rem;
+  padding-right: 1rem;
 }
 
 .navigation ul {
   display: inline-flex;
   list-style: none;
+  margin: 0;
 }
 
 .navigation p {
@@ -153,12 +155,20 @@ html {
   flex-direction: row;
   width: 960px;
   justify-content: space-around;
+  border: 1px solid black;
 }
 
 .container .philosophy {
   display: flex;
   flex-direction: column;
   width: 35%;
+  border: 1px solid black;
+}
+
+.heading {
+  margin: 0;
+  border: 1px solid black;
+  padding: 0;
 }
 
 .heading p {
@@ -168,9 +178,12 @@ html {
   background-color: cadetblue;
   color: white;
   text-transform: uppercase;
-  width: 35%;
   width: 10rem;
-  margin-bottom: 1rem;
+  border: 1px solid black;
+}
+
+.paragraph p {
+  border: 1px solid black;
 }
 
 .container .appointments {
@@ -178,8 +191,9 @@ html {
   flex-direction: column;
   margin-right: 5%;
   width: 35%;
+  justify-content: flex-start;
+  border: 1px solid black;
 }
-
 
 .footer {
   display: flex;
